third_party/move/move-compiler-v2/tests/bytecode-generator/v1-commands/continue_outside_loop.exp
// -- Model dump before bytecode pipeline
module <SELF>_0 {
    private fun main() {
        continue
    }
} // end <SELF>_0


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/bytecode-generator/v1-commands/continue_outside_loop.move:3:5
  │
3 │     continue
  │     ^^^^^^^^
